--- a/Pear/Controllers/Profiles/Profile Bio/ProfileBioViewController.storyboard
+++ b/Pear/Controllers/Profiles/Profile Bio/ProfileBioViewController.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="20" y="0.0" width="335" height="240"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bxT-jV-Llj">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="211.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="191.5"/>
                                         <string key="text">Like bad girls? Sammi’s bad at everything. 
  
 Except watching movies and drinking copious amounts of boba. If you like either of those things, she’s the one!</string>
@@ -34,13 +34,13 @@ Except watching movies and drinking copious amounts of boba. If you like either 
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vet-ng-HXm">
-                                        <rect key="frame" x="38" y="219.5" width="42" height="20.5"/>
+                                        <rect key="frame" x="38" y="207.5" width="42" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile-icon-creator-leaf" translatesAutoresizingMaskIntoConstraints="NO" id="m88-Qf-uDv">
-                                        <rect key="frame" x="0.0" y="215" width="30" height="30"/>
+                                        <rect key="frame" x="0.0" y="203" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="MCM-st-OgQ"/>
                                             <constraint firstAttribute="width" secondItem="m88-Qf-uDv" secondAttribute="height" multiplier="1:1" id="z25-mA-oro"/>
@@ -51,8 +51,8 @@ Except watching movies and drinking copious amounts of boba. If you like either 
                                     <constraint firstItem="m88-Qf-uDv" firstAttribute="centerY" secondItem="vet-ng-HXm" secondAttribute="centerY" id="4BS-MO-twq"/>
                                     <constraint firstItem="m88-Qf-uDv" firstAttribute="leading" secondItem="ko6-Ff-fHM" secondAttribute="leading" id="TXg-Mm-Dq8"/>
                                     <constraint firstItem="bxT-jV-Llj" firstAttribute="top" secondItem="ko6-Ff-fHM" secondAttribute="top" id="YFz-iW-tp0"/>
-                                    <constraint firstAttribute="bottom" secondItem="vet-ng-HXm" secondAttribute="bottom" id="aZw-zr-OM0"/>
-                                    <constraint firstItem="vet-ng-HXm" firstAttribute="top" secondItem="bxT-jV-Llj" secondAttribute="bottom" constant="8" id="b40-6h-TAw"/>
+                                    <constraint firstAttribute="bottom" secondItem="vet-ng-HXm" secondAttribute="bottom" constant="12" id="aZw-zr-OM0"/>
+                                    <constraint firstItem="vet-ng-HXm" firstAttribute="top" secondItem="bxT-jV-Llj" secondAttribute="bottom" constant="16" id="b40-6h-TAw"/>
                                     <constraint firstItem="bxT-jV-Llj" firstAttribute="leading" secondItem="ko6-Ff-fHM" secondAttribute="leading" id="dCj-cu-446"/>
                                     <constraint firstItem="vet-ng-HXm" firstAttribute="leading" secondItem="m88-Qf-uDv" secondAttribute="trailing" constant="8" id="fwl-Lg-eMP"/>
                                     <constraint firstAttribute="trailing" secondItem="bxT-jV-Llj" secondAttribute="trailing" id="nnp-Vl-O3z"/>
