--- a/Pear/Controllers/Create Profile Flow/Short Bio Input/GetStartedShortBioViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Short Bio Input/GetStartedShortBioViewController.storyboard
@@ -92,6 +92,9 @@
                                         <state key="normal" image="onboarding-close-button">
                                             <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="cancelButtonClicked:" destination="jHD-ah-33t" eventType="touchUpInside" id="oTH-bO-uJt"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wyd-NL-ROU" userLabel="Progress View">
                                         <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
