Update placeholder image on me tab

--- a/Pear/Controllers/Create Profile Flow/Short Bio Input/GetStartedShortBioViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Short Bio Input/GetStartedShortBioViewController.storyboard
@@ -159,7 +159,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-back-button" width="170.66667175292969" height="170.66667175292969"/>
+        <image name="onboarding-back-button" width="120" height="120"/>
         <image name="onboarding-close-button" width="120" height="120"/>
         <image name="onboarding-icon-short-bio" width="128" height="128"/>
     </resources>
