--- a/Pear/Controllers/Profiles/Profile Bio/NewProfileBioViewController.storyboard
+++ b/Pear/Controllers/Profiles/Profile Bio/NewProfileBioViewController.storyboard
@@ -13,9 +13,6 @@
         <array key="OpenSans-Bold.ttf">
             <string>OpenSans-Bold</string>
         </array>
-        <array key="OpenSans-ExtraBold.ttf">
-            <string>OpenSans-ExtraBold</string>
-        </array>
     </customFonts>
     <scenes>
         <!--New Profile Bio View Controller-->
@@ -27,11 +24,18 @@
                         <viewControllerLayoutGuide type="bottom" id="0vR-ZU-LPd"/>
                     </layoutGuides>
                     <stackView key="view" opaque="NO" contentMode="scaleToFill" axis="vertical" id="vyv-gA-3fp">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jMd-zZ-FwJ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="20"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="X7b-pm-5Ad"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YIt-mO-luM">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="56"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Zu-M6-qgx">
                                         <rect key="frame" x="16" y="8" width="40" height="40"/>
@@ -41,7 +45,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kUi-Qy-I8Z">
-                                        <rect key="frame" x="68" y="20" width="334" height="16.5"/>
+                                        <rect key="frame" x="68" y="18.5" width="334" height="19.5"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -58,12 +62,12 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sWf-JT-zw7">
-                                <rect key="frame" x="0.0" y="56" width="414" height="50"/>
+                                <rect key="frame" x="0.0" y="76" width="414" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rU3-bb-1oj">
                                         <rect key="frame" x="16" y="8" width="386" height="34"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -75,12 +79,12 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bgk-Vs-ffX">
-                                <rect key="frame" x="0.0" y="106" width="414" height="94"/>
+                                <rect key="frame" x="0.0" y="126" width="414" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ZB-lg-JfM">
-                                        <rect key="frame" x="16" y="8" width="386" height="78"/>
-                                        <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="24"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="16" y="8" width="386" height="34"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="24"/>
+                                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -91,17 +95,47 @@
                                     <constraint firstItem="3ZB-lg-JfM" firstAttribute="centerY" secondItem="Bgk-Vs-ffX" secondAttribute="centerY" id="s4k-hn-eFF"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qJ8-UI-hZQ">
+                                <rect key="frame" x="0.0" y="176" width="414" height="94"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QQA-x6-RbN">
+                                        <rect key="frame" x="16" y="8" width="79" height="78"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
+                                        <state key="normal" title="Show more">
+                                            <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="expandButtonClicked:" destination="E6c-S7-2kK" eventType="touchUpInside" id="fKk-pc-f5z"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="QQA-x6-RbN" secondAttribute="bottom" constant="8" id="m7e-rO-lgS"/>
+                                    <constraint firstItem="QQA-x6-RbN" firstAttribute="top" secondItem="qJ8-UI-hZQ" secondAttribute="top" constant="8" id="vfY-7v-Btx"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vkP-PS-lrp">
+                                <rect key="frame" x="0.0" y="270" width="414" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="SdL-50-y3H"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <constraints>
                             <constraint firstItem="3ZB-lg-JfM" firstAttribute="trailing" secondItem="rU3-bb-1oj" secondAttribute="trailing" id="9gf-p2-rnJ"/>
                             <constraint firstItem="3ZB-lg-JfM" firstAttribute="leading" secondItem="3Zu-M6-qgx" secondAttribute="leading" id="DfW-hk-xxH"/>
+                            <constraint firstItem="QQA-x6-RbN" firstAttribute="leading" secondItem="3Zu-M6-qgx" secondAttribute="leading" id="Kjh-ea-SiL"/>
                             <constraint firstItem="rU3-bb-1oj" firstAttribute="leading" secondItem="3Zu-M6-qgx" secondAttribute="leading" id="OGx-52-Lib"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SL1-88-gXs"/>
                     </stackView>
-                    <size key="freeformSize" width="414" height="200"/>
+                    <size key="freeformSize" width="414" height="300"/>
                     <connections>
                         <outlet property="bioContentLabel" destination="3ZB-lg-JfM" id="Iyk-MV-bVV"/>
+                        <outlet property="expandButton" destination="QQA-x6-RbN" id="RRP-Ol-vBj"/>
+                        <outlet property="showMoreButtonContainerView" destination="qJ8-UI-hZQ" id="K1m-K8-e41"/>
                         <outlet property="stackView" destination="vyv-gA-3fp" id="mij-KS-a3R"/>
                         <outlet property="writtenByImageView" destination="3Zu-M6-qgx" id="rvv-oU-n78"/>
                         <outlet property="writtenByLabel" destination="kUi-Qy-I8Z" id="zsZ-ym-XEb"/>
