Keyboard Events protocol added

--- a/Pear/Controllers/Profiles/Profile Bio/NewProfileBioViewController.storyboard
+++ b/Pear/Controllers/Profiles/Profile Bio/NewProfileBioViewController.storyboard
@@ -81,8 +81,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bgk-Vs-ffX">
                                 <rect key="frame" x="0.0" y="126" width="414" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ZB-lg-JfM">
-                                        <rect key="frame" x="16" y="8" width="386" height="34"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ZB-lg-JfM">
+                                        <rect key="frame" x="14" y="8" width="386" height="34"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="24"/>
                                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -147,6 +147,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="writtenByThumbnailPlaceholder" width="512" height="512"/>
+        <image name="writtenByThumbnailPlaceholder" width="200" height="200"/>
     </resources>
 </document>
